--- a/11/src/style/style.css
+++ b/11/src/style/style.css
@@ -3,10 +3,14 @@
     margin: 0 auto;
 }
 
+:root {
+    --black: #000;
+}
+
 .nav,
 .lend,
 .text{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'PT Sans', sans-serif;
 }
 
 .text{
@@ -16,7 +20,7 @@
 }
 
 .text_item{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'PT Sans', sans-serif;
     font-weight: 400;
     font-size: 36px;
     line-height: 48px;
@@ -32,7 +36,7 @@ h1,
 h2,
 h3,
 h4{
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     line-height: 48px;
     padding-bottom: 48px;
@@ -56,7 +60,12 @@ h4{
 
 .leng{
     padding-right: 41px;
-    font-family: 'Roboto'
+    font-family: 'Roboto';
+    font-weight: 900;
+    font-size: 20px;
+    letter-spacing: 0.04em;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 1.5px var(--black);
 }
 
 .inform{
