--- a/16/src/style/block/_header.scss
+++ b/16/src/style/block/_header.scss
@@ -5,7 +5,7 @@
        padding: 35px 0; 
     }
     
-    &:active{
+    &.active{
         .nav-holder{
             opacity: 1;
             visibility: visible;
