--- a/Progect 1/src/style/section/_clone-two-section.scss
+++ b/Progect 1/src/style/section/_clone-two-section.scss
@@ -25,8 +25,7 @@
     .card{
         max-width: 543px;
         width: 100%;
-        background: #232323;
-        opacity: 0.9;
+        background: hsla(0, 0%, 14%, 0.9);
         padding: 49px 32px 50px;
     }
 
