--- a/Progect 1/src/style/main.css
+++ b/Progect 1/src/style/main.css
@@ -693,8 +693,7 @@ body {
 .clone-one-section .card {
   max-width: 543px;
   width: 100%;
-  background: #232323;
-  opacity: 0.9;
+  background: rgba(36, 36, 36, 0.9);
   padding: 49px 32px 50px;
 }
 
@@ -748,8 +747,7 @@ body {
 .clone-two-section .card {
   max-width: 543px;
   width: 100%;
-  background: #232323;
-  opacity: 0.9;
+  background: rgba(36, 36, 36, 0.9);
   padding: 49px 32px 50px;
 }
 
